<resources>
    <string name="app_name">Lendify</string>
    <string name="post_error">Some error occurred.</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="log_in_to_your_account">Log in to Your Account</string>
    <string name="login_error">Please check your username or password.</string>
    <string name="sign_up">Sign up</string>
    <string name="register_for_an_account">Register for an Account</string>
    <string name="log_in">Log In</string>
    <string name="register_error">There was an error in signing up. Please try again later.</string>
    <string name="add_item">Add Item</string>
    <string name="full_name">Full Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="phone_number">Phone Number</string>
</resources>
